--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -25,5 +25,14 @@ http {
             proxy_set_header X-Forworded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forworded-Host $server_name;
         }
+
+        location /service/api/beflex/upload {
+            proxy_pass http://app:80/api/beflex/upload;
+            proxy_redirect off;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forworded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forworded-Host $server_name;
+        }
     }
 }
